# Blackjack

./: CMakeLists.txt  README.md
Client/: api.py  main.py  package-lock.json  package.json
Client/src/: App.css  App.js  index.css  index.js
Client/src/api/: axiosConfig.js
Client/src/components/: DataFetchingComponent.js
Client/src/components/Ausgabe/: Ausgabe.css  Ausgabe.js  Card.js  Player.js
Client/src/components/Eingabe/: Eingabe.css  Eingabe.js
Server/: CMakeLists.txt  Dockerfile
Server/api/: api.py  pybind.cpp
Server/extra/: api.py  pybind.cpp
Server/include/: blackjack.hpp  card.hpp  player.hpp
Server/src/: blackjack.cpp
Server/test/: test.cpp
docs/Implementation Details/: implementation_details.drawio
